--- a/babel_environment.yml
+++ b/babel_environment.yml
@@ -5,6 +5,8 @@ channels:
   - conda-forge
   - defaults
 dependencies:
+  - flask=3.1.0
+  - flask_cors=5.0.0
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=2_gnu
   - abnumber=0.4.3=pyhdfd78af_0
