--- a/babel_environment.yml
+++ b/babel_environment.yml
@@ -6,7 +6,7 @@ channels:
   - defaults
 dependencies:
   - flask=3.1.0
-  - flask_cors=5.0.0
+  - flask-cors=5.0.0
   - gunicorn=23.0.0
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=2_gnu
